# vbsp

./: .gitignore  Cargo.toml  LICENSE  README.md  base.bench  flake.nix  readme.md  test.bsp
.github/workflows/: ci.yml  rust.yml
benches/: bench.rs
common/: Cargo.toml
common/src/: angle.rs  bool.rs  color.rs  lib.rs  lightcolor.rs  negated.rs  prop.rs  property.rs  vector.rs
derive/: Cargo.toml
derive/src/: entity.rs  lib.rs
derive/tests/: expand.rs
examples/: convert.rs  parse.rs  parse_tf_entities.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: bspfile.rs  data.rs  error.rs  handle.rs  lib.rs  reader.rs
src/data/: displacement.rs  entity.rs  game.rs  leaves.rs  mod.rs  prop.rs  vector.rs
src/data/entity/: basic.rs  css.rs
src/handle/: displacement.rs  face.rs  game.rs  mod.rs
