[package]
name = "vbsp"
version = "0.5.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
homepage = "https://github.com/icewind1991/vbsp"
repository = "https://github.com/icewind1991/vbsp"
description = "Rust parser for valve bsp files."
license = "MIT"
edition = "2021"
readme = "README.md"
exclude = ["*.bsp"]
rust-version = "1.67.0"

[dependencies]
arrayvec = "0.7.4"
bitflags = "2.4.1"
bv = "0.11.1"
thiserror = "1.0.50"
lzma-rs = "0.3.0"
binrw = "0.13.1"
static_assertions = "1.1.0"
num_enum = "0.7.1"
vbsp-derive = { path = "derive", version = "0.1.0", features = ["__vbsp_as_self"], optional = true }
cgmath = "0.18.0"
zip = { package = "zip-lzma", version = "0.6.3", default-features = false, features = ["lzma"] }
itertools = "0.12.0"
ahash = "0.8.6"

[dev-dependencies]
obj = "0.10"
main_error = "0.1.2"

[profile.dev]
opt-level = 2

[features]
default = ["typed_entities"]
typed_entities = ["vbsp-derive"]
bench = []
