[package]
name = "vbsp"
version = "0.6.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
homepage = "https://github.com/icewind1991/vbsp"
repository = "https://github.com/icewind1991/vbsp"
description = "Rust parser for valve bsp files."
license = "MIT"
edition = "2021"
readme = "README.md"
exclude = ["*.bsp"]
rust-version = "1.70.0"

[dependencies]
arrayvec = "0.7.6"
bitflags = "2.6.0"
bv = "0.11.1"
thiserror = "1.0.63"
lzma-rs = "0.3.0"
binrw = "0.14.0"
static_assertions = "1.1.0"
num_enum = "0.7.2"
cgmath = "0.18.0"
zip = { package = "zip-lzma", version = "0.6.3", default-features = false, features = ["lzma"] }
itertools = "0.13.0"
ahash = "0.8.11"
serde = "1.0.209"
vdf-reader = "0.2.0"

[dev-dependencies]
obj = "0.10"
main_error = "0.1.2"

[profile.dev]
opt-level = 2

[features]
default = ["basic"]
bench = []
basic = []
