[package]
name = "vbsp"
version = "0.7.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
homepage = "https://github.com/icewind1991/vbsp"
repository = "https://github.com/icewind1991/vbsp"
description = "Rust parser for valve bsp files."
license = "MIT"
edition = "2021"
readme = "README.md"
exclude = ["*.bsp"]
rust-version = "1.85.0"

[dependencies]
arrayvec = "0.7.6"
bitflags = "2.8.0"
bv = "0.11.1"
thiserror = "2.0.11"
lzma-rs = "0.3.0"
binrw = "0.14.1"
static_assertions = "1.1.0"
num_enum = "0.7.3"
cgmath = "0.18.0"
zip = { package = "zip-lzma", version = "0.6.3", default-features = false, features = ["lzma"] }
itertools = "0.14.0"
ahash = "0.8.11"
serde = "1.0.218"
vdf-reader = "0.3.0"

[dev-dependencies]
obj = "0.10"
main_error = "0.1.2"
criterion = "0.5.1"
vbsp-entities-tf2 = { version = "0.1.0-egg" }

[profile.dev]
opt-level = 2

[[bench]]
name = "bench"
harness = false
