[package]
name = "vbsp-common"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
homepage = "https://github.com/icewind1991/vbsp"
repository = "https://github.com/icewind1991/vbsp"
description = "Common types and helpers for valve bsp files."
license = "MIT"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
binrw = "0.14.1"
serde = { version = "1.0.218", features = ["derive"] }
cgmath = "0.18.0"
thiserror = "2.0.11"
