[package]
name = "vbsp-derive"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
homepage = "https://github.com/icewind1991/vbsp"
repository = "https://github.com/icewind1991/vbsp"
description = "Derive macros used by vbsp."
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = "2.0.39"
quote = "1.0.33"
proc-macro2 = "1.0.69"
structmeta = "0.2.0"
merge = "0.1.0"

[dev-dependencies]
vbsp = { version = "0.2.0", path = "..", default-features = false }

[features]
__vbsp_as_self = []